--- a/popup.html
+++ b/popup.html
@@ -7,6 +7,7 @@
 <body>
   <h2>Saved Highlights</h2>
   <ul id="highlightList"></ul>
+  <button id="clear">Clear</button>
   <script src="popup.js"></script>
 </body>
 </html>
